tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::indexing::p04_parses_assignment_to_index_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Assign:
            left:
              Index:
                target:
                  Var: a
                index:
                  Number: 0
            right:
              Number: 5
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Assign:
          left:
            Index:
              target:
                Var: a
              index:
                Number: 0
          right:
            Number: 5
          op: Assign
