tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::literals::p02_parses_float_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Number: 123.456
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Number: 123.456
