tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::literals::p03_parses_string_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          String: hello
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        String: hello
