tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::literals::p04_parses_true_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Bool: true
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Bool: true
