tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::literals::p05_parses_false_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Bool: false
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Bool: false
