tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::literals::p06_parses_identifier_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Var: foo
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Var: foo
