tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::members::p01_parses_member_access_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Member:
            target:
              Var: a
            field: b
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Member:
          target:
            Var: a
          field: b
