tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::members::p02_parses_member_chain_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Member:
            target:
              Member:
                target:
                  Var: a
                field: b
            field: c
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Member:
          target:
            Member:
              target:
                Var: a
              field: b
          field: c
