tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::members::p03_parses_member_assignment_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Assign:
            left:
              Member:
                target:
                  Var: a
                field: b
            right:
              Number: 5
            op: Assign
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Assign:
          left:
            Member:
              target:
                Var: a
              field: b
          right:
            Number: 5
          op: Assign
