tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::postfix_chaining::p01_call_after_member_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Call:
            callee:
              Member:
                target:
                  Var: obj
                field: method
            args: []
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Call:
          callee:
            Member:
              target:
                Var: obj
              field: method
          args: []
