tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::postfix_chaining::p04_deeply_chained_expression_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Index:
            target:
              Call:
                callee:
                  Member:
                    target:
                      Index:
                        target:
                          Member:
                            target:
                              Var: data
                            field: users
                        index:
                          Number: 0
                    field: get_name
                args: []
            index:
              Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Index:
          target:
            Call:
              callee:
                Member:
                  target:
                    Index:
                      target:
                        Member:
                          target:
                            Var: data
                          field: users
                      index:
                        Number: 0
                  field: get_name
              args: []
          index:
            Number: 1
