tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::postfix_chaining::p05_chained_method_calls_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Call:
            callee:
              Member:
                target:
                  Call:
                    callee:
                      Member:
                        target:
                          Call:
                            callee:
                              Member:
                                target:
                                  Var: client
                                field: connect
                            args: []
                        field: send
                    args:
                      - Var: data
                field: disconnect
            args: []
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Call:
          callee:
            Member:
              target:
                Call:
                  callee:
                    Member:
                      target:
                        Call:
                          callee:
                            Member:
                              target:
                                Var: client
                              field: connect
                          args: []
                      field: send
                  args:
                    - Var: data
              field: disconnect
          args: []
